# tcdd-dev

./: .env.example  .env.gdrive-get  .gitignore  AUTOSTART_GUIDE.md  CONFIG.md  CONFIG_GUIDE.md  CONFIG_IMPLEMENTATION.md  CONFIG_QUICKREF.md  DEPENDENCIES.md  INSTALLATION_COMPLETE.md  NAVIGATION.md  OPTIMIZATION.md  PI_SETUP.md  QUICKREF.md  README.md  SCREEN_OPTIMIZATION.md  TOUCHSCREEN_COMPLETE.md  TOUCHSCREEN_UI.md  UI_IMPROVEMENTS.md  VENV_GUIDE.md  config-template-json.txt  config.json  config.json.backup  config.template.json  curl-model.sh  deploy-pi.sh  gdrive-get.sh  mitt.py  mitt.requirements.txt  start-dev.ps1  start.ps1  start.sh  tcdd-detector.service
backend/: bench_pipeline.py  bluetooth_mgmt.py  camera.py  config.json  config.py  detector.py  display.py  hailo_debug.py  hotspot.py  main.py  metrics_logger.py  package.json  pairing.py  requirements.txt  rpidev.requirements.txt  server.js  test_bluetooth.py  test_hotspot.py  test_pairing.py  test_pairing_integration.py  test_tts_persistence.py  tts.py  violations_logger.py
backend/cpp/: CAMERA_ISSUE_RESOLUTION.md  CAMERA_TROUBLESHOOTING.md  CMakeLists.txt  CONFIG_USAGE.md  DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  LOGGING_IMPLEMENTATION.md  NO_ML_FLAG.md  QUICKREF.md  README.md  REFACTOR_SUMMARY.md  SETUP.md  VERBOSE_LOGGING.md  build.sh  camera.cpp  camera.h  config_loader.cpp  config_loader.h  detector.cpp  detector.h  diagnose_camera.sh  download_deps.sh  http_server.cpp  http_server.h  logger.cpp  logger.h  logging_flags.cpp  logging_flags.h  logging_flags_README.md  main.cpp  troubleshoot.sh
(+65 files in other folders)
